--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "houdinivexhelp",
 	"displayName": "Houdini Vex Help",
 	"description": "Extension to open Houdini vex help pages from VSCode with a command.",
-	"version": "0.0.2",
-	"publisher": "Guillaume Jobst",
+	"version": "0.0.3",
+	"publisher": "cgtoolbox-guillaume-jobst",
 	"engines": {
 		"vscode": "^1.55.0"
 	},
@@ -32,7 +32,7 @@
 				"properties": {
 					"houdinivexhelp.houdiniHelpURL":{
 						"type":"string",
-						"default":"http://127.0.0.1:48626/vex/functions/",
+						"default":"https://www.sidefx.com/docs/houdini18.5/vex/functions/",
 						"description": "Base URL to construct the help page address from, your current selected text will be appened to it."
 					}
 				}
