--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
 		"onCommand:houdinivexhelp.openVexHelp"
 	],
 	"main": "./out/extension.js",
+	"icon": "images/houvexhelp.png",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/cgtoolbox/vscode-houdinivexhelp.git"
+    },
 	"contributes": {
 		"commands": [
 			{
